Closed Bug 1556481 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::gfx::UnscaledFontDWrite::GetFontFileData]

Categories

(Core :: Graphics: WebRender, defect, P3)

Desktop
Windows
defect

Tracking

()

RESOLVED FIXED
mozilla69
Tracking Status
firefox-esr60 --- unaffected
firefox67 --- wontfix
firefox68 --- fixed
firefox69 --- fixed

People

(Reporter: aosmond, Assigned: lsalzman)

References

(Blocks 1 open bug)

Details

(Keywords: crash, Whiteboard: [gfx-noted])

Crash Data

Attachments

(1 file)

This bug is for crash report bp-f3775ec2-846a-4dc0-9b85-cf2890190601. This signature seems to happen predominately for WebRender users (although not exclusively). I'm not sure if there is something to make it more likely to happen with WebRender users.

Top 10 frames of crashing thread:

0 xul.dll mozilla::gfx::UnscaledFontDWrite::GetFontFileData gfx/2d/ScaledFontDWrite.cpp:302
1 xul.dll class mozilla::Maybe<mozilla::wr::FontKey> mozilla::layers::WebRenderBridgeChild::GetFontKeyForUnscaledFont gfx/layers/wr/WebRenderBridgeChild.cpp:338
2 xul.dll mozilla::layers::WebRenderBridgeChild::GetFontKeyForScaledFont gfx/layers/wr/WebRenderBridgeChild.cpp:294
3 xul.dll mozilla::layers::WebRenderBridgeChild::PushGlyphs gfx/layers/wr/WebRenderBridgeChild.cpp:267
4 xul.dll mozilla::layout::TextDrawTarget::FillGlyphs layout/generic/TextDrawTarget.h:216
5 xul.dll void GlyphBufferAzure::FlushGlyphs gfx/thebes/gfxFont.cpp:1675
6 xul.dll gfxFont::Draw gfx/thebes/gfxFont.cpp:2272
7 xul.dll void gfxTextRun::DrawGlyphs gfx/thebes/gfxTextRun.cpp:408
8 xul.dll gfxTextRun::Draw gfx/thebes/gfxTextRun.cpp:640
9 xul.dll static void DrawTextRun layout/generic/nsTextFrame.cpp

Assignee: nobody → lsalzman
Status: NEW → ASSIGNED
Priority: -- → P3
Whiteboard: [gfx-noted]
Pushed by lsalzman@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/50727795c336 check for DWrite failures in UnscaledFontDWrite::GetFontFileData. r=jfkthame
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla69

Please nominate this for Beta approval when you get a chance. It grafts cleanly as-landed.

Flags: needinfo?(lsalzman)

Comment on attachment 9069554 [details]
Bug 1556481 - check for DWrite failures in UnscaledFontDWrite::GetFontFileData. r?jfkthame

Beta/Release Uplift Approval Request

  • User impact if declined: WebRender may crash on Windows trying to render certain fonts.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Avoids crash by checking for DWrite API failures.
  • String changes made/needed:
Flags: needinfo?(lsalzman)
Attachment #9069554 - Flags: approval-mozilla-beta?

Comment on attachment 9069554 [details]
Bug 1556481 - check for DWrite failures in UnscaledFontDWrite::GetFontFileData. r?jfkthame

small volume gfx crash fix, approved for 68.0b9

Attachment #9069554 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: