Bug 1556481 - check for DWrite failures in UnscaledFontDWrite::GetFontFileData. r=jfkthame a=jcristau

Differential Revision: https://phabricator.services.mozilla.com/D33585

--HG--
extra : rebase_source : 1834196cb43795c43946f5b01a9ffe2d03395932
extra : source : 50727795c336ed1cb7571be95af7a4679035d9a3
extra : histedit_source : 13576863c177a111d1a5c27d319262e3b1fa1a63